--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,6 @@ dmypy.json
 # profiling data
 .prof
 
-
+*.ckpt
 *.txt
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
