--- a/deeplearn.yml
+++ b/deeplearn.yml
@@ -1,230 +1,213 @@
 name: deeplearn
 channels:
+  - pytorch
   - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
-  - _pytorch_select=0.1=cpu_0
-  - absl-py=0.15.0=pyhd8ed1ab_0
-  - aiohttp=3.7.4.post0=py39h3811e60_0
-  - anyio=2.2.0=py39h06a4308_1
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - absl-py=0.15.0=pyhd3eb1b0_0
+  - aiohttp=3.8.1=py39h7f8727e_1
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - anyio=3.5.0=py39h06a4308_0
   - argon2-cffi=20.1.0=py39h27cfd23_1
-  - async-timeout=3.0.1=py39h06a4308_0
-  - async_generator=1.10=pyhd3eb1b0_0
-  - attrs=21.2.0=pyhd3eb1b0_0
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - async-timeout=4.0.1=pyhd3eb1b0_0
+  - attrs=21.4.0=pyhd3eb1b0_0
   - babel=2.9.1=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.11.1=py39h06a4308_0
   - blas=1.0=mkl
-  - bleach=4.0.0=pyhd3eb1b0_0
-  - blinker=1.4=py_1
-  - blosc=1.21.0=h8c45485_0
-  - bottleneck=1.3.2=py39hdd57654_1
-  - brotli=1.0.9=h9c3ff4c_4
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - brunsli=0.1=h2531618_0
-  - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2021.10.8=ha878542_0
-  - cachetools=4.2.4=pyhd8ed1ab_0
-  - certifi=2021.10.8=py39hf3d152e_1
-  - cffi=1.14.6=py39h400218f_0
-  - cfitsio=3.470=hf0d0db6_6
-  - chardet=4.0.0=py39hf3d152e_2
-  - charls=2.2.0=h2531618_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.0.3=py39hf3d152e_1
-  - cloudpickle=2.0.0=pyhd3eb1b0_0
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=35.0.0=py39hd23ed53_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cython=0.29.24=py39he80948d_0
-  - cytoolz=0.11.0=py39h27cfd23_0
-  - dask-core=2021.10.0=pyhd3eb1b0_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - dbus=1.13.6=he372182_0
-  - debugpy=1.4.1=py39h295c915_0
-  - decorator=5.1.0=pyhd3eb1b0_0
+  - bleach=4.1.0=pyhd3eb1b0_0
+  - blinker=1.4=py39h06a4308_0
+  - bottleneck=1.3.5=py39h7deecbd_0
+  - brotli=1.0.9=h5eee18b_7
+  - brotli-bin=1.0.9=h5eee18b_7
+  - brotlipy=0.7.0=py39hb9d737c_1004
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f8727e_0
+  - ca-certificates=2022.07.19=h06a4308_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - certifi=2022.6.15=py39h06a4308_0
+  - cffi=1.15.1=py39h74dc2b5_0
+  - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  - click=8.0.4=py39h06a4308_0
+  - cryptography=37.0.4=py39hd97740a_0
+  - cudatoolkit=11.6.0=hecad31d_10
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.5.1=py39h295c915_0
+  - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
-  - entrypoints=0.3=py39h06a4308_0
-  - expat=2.4.1=h9c3ff4c_0
-  - fontconfig=2.13.1=hba837de_1005
+  - entrypoints=0.4=py39h06a4308_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.4.4=h295c915_0
+  - ffmpeg=4.3=hf484d3e_0
+  - fftw=3.3.9=h27cfd23_1
+  - fontconfig=2.13.1=h6c09931_0
   - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.10.4=h0708190_1
-  - fsspec=2021.11.0=pyhd8ed1ab_0
-  - future=0.18.2=py39hf3d152e_4
-  - giflib=5.2.1=h7b6447c_0
-  - glib=2.69.1=h5202010_0
-  - google-auth=2.3.3=pyh6c4a22f_0
-  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
-  - grpcio=1.37.1=py39hff7568b_0
+  - freetype=2.12.1=hca18f0e_0
+  - frozenlist=1.2.0=py39h7f8727e_0
+  - glib=2.69.1=h4ff587b_1
+  - gmp=6.2.1=h58526e2_0
+  - gnutls=3.6.13=h85f3911_1
+  - google-auth=2.6.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
+  - grpcio=1.42.0=py39hce63b2e_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=h28cd5cc_2
-  - icu=58.2=hf484d3e_1000
-  - idna=3.2=pyhd3eb1b0_0
-  - imagecodecs=2021.8.26=py39h4cda21f_0
-  - imageio=2.9.0=pyhd3eb1b0_0
-  - importlib-metadata=4.8.1=py39h06a4308_0
-  - importlib_metadata=4.8.1=hd3eb1b0_0
-  - intel-openmp=2019.4=243
-  - ipykernel=6.4.1=py39h06a4308_1
-  - ipython=7.29.0=py39hb070fc8_0
+  - icu=58.2=he6710b0_3
+  - idna=3.4=pyhd8ed1ab_0
+  - imageio=2.22.0=pyhfa7a67d_0
+  - importlib-metadata=4.11.3=py39h06a4308_0
+  - ipykernel=6.15.2=py39h06a4308_0
+  - ipython=8.4.0=py39h06a4308_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - jbig=2.1=h7f98852_2003
-  - jedi=0.18.0=py39h06a4308_1
-  - jinja2=3.0.2=pyhd3eb1b0_0
-  - joblib=0.17.0=py_0
-  - jpeg=9d=h36c2ea0_0
+  - jedi=0.18.1=py39h06a4308_1
+  - jinja2=3.0.3=pyhd3eb1b0_0
+  - joblib=1.1.0=pyhd3eb1b0_0
+  - jpeg=9e=h166bdaf_2
   - json5=0.9.6=pyhd3eb1b0_0
-  - jsonschema=3.2.0=pyhd3eb1b0_2
-  - jupyter_client=7.0.1=pyhd3eb1b0_0
-  - jupyter_core=4.8.1=py39h06a4308_0
-  - jupyter_server=1.4.1=py39h06a4308_0
-  - jupyterlab=3.2.1=pyhd3eb1b0_1
+  - jsonschema=4.4.0=py39h06a4308_0
+  - jupyter_client=7.3.5=py39h06a4308_0
+  - jupyter_core=4.10.0=py39h06a4308_0
+  - jupyter_server=1.18.1=py39h06a4308_0
+  - jupyterlab=3.4.4=py39h06a4308_0
   - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.8.2=pyhd3eb1b0_0
-  - jxrlib=1.1=h7b6447c_2
-  - kiwisolver=1.3.1=py39h2531618_0
-  - krb5=1.19.2=hac12032_0
+  - jupyterlab_server=2.12.0=py39h06a4308_0
+  - kiwisolver=1.4.2=py39h295c915_0
+  - lame=3.100=h7f98852_1001
   - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.35.1=h7274673_9
-  - lerc=3.0=h295c915_0
-  - libaec=1.0.4=he6710b0_1
-  - libcurl=7.78.0=h0b77cf5_0
-  - libdeflate=1.8=h7f8727e_5
-  - libedit=3.1.20210910=h7f8727e_0
-  - libev=4.33=h7f8727e_1
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=4.0.0=h27087fc_0
+  - libbrotlicommon=1.0.9=h5eee18b_7
+  - libbrotlidec=1.0.9=h5eee18b_7
+  - libbrotlienc=1.0.9=h5eee18b_7
+  - libdeflate=1.14=h166bdaf_0
   - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.3.0=h5101ec6_17
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libgomp=9.3.0=h5101ec6_17
-  - libmklml=2019.0.5=0
-  - libnghttp2=1.41.0=hf8bcb03_2
-  - libpng=1.6.37=h21135ba_2
-  - libprotobuf=3.15.8=h780b84a_0
+  - libgcc-ng=12.1.0=h8d9b700_16
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libiconv=1.17=h166bdaf_0
+  - libnsl=2.0.0=h7f98852_0
+  - libpng=1.6.38=h753d276_0
+  - libprotobuf=3.20.1=h4ff587b_0
   - libsodium=1.0.18=h7b6447c_0
-  - libssh2=1.9.0=h1ba5d50_1
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - libtiff=4.2.0=h85742a9_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp=1.2.0=h89dd481_0
-  - libwebp-base=1.2.0=h27cfd23_0
-  - libxcb=1.13=h7f98852_1003
-  - libxml2=2.9.12=h03d6c58_0
-  - libzopfli=1.0.3=he6710b0_0
-  - locket=0.2.1=py39h06a4308_1
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markdown=3.3.4=pyhd8ed1ab_0
-  - markupsafe=2.0.1=py39h27cfd23_0
-  - matplotlib=3.4.3=py39hf3d152e_1
-  - matplotlib-base=3.4.3=py39hbbc1b5f_0
-  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
+  - libsqlite=3.39.3=h753d276_0
+  - libstdcxx-ng=12.1.0=ha89aaad_16
+  - libtiff=4.4.0=h55922b4_4
+  - libuuid=1.0.3=h7f8727e_2
+  - libwebp-base=1.2.4=h166bdaf_0
+  - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.14=h74e7548_0
+  - libzlib=1.2.12=h166bdaf_3
+  - llvm-openmp=14.0.4=he0ac6c6_0
+  - markdown=3.3.4=py39h06a4308_0
+  - markupsafe=2.1.1=py39h7f8727e_0
+  - matplotlib=3.5.2=py39h06a4308_0
+  - matplotlib-base=3.5.2=py39hf590b9c_0
+  - matplotlib-inline=0.1.6=py39h06a4308_0
   - mistune=0.8.4=py39h27cfd23_1000
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py39he8ac12f_0
-  - mkl_fft=1.3.0=py39h54f3939_0
-  - mkl_random=1.0.2=py39h63df603_0
-  - multidict=5.1.0=py39h27cfd23_2
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nbclassic=0.2.6=pyhd3eb1b0_0
-  - nbclient=0.5.3=pyhd3eb1b0_0
-  - nbconvert=6.1.0=py39h06a4308_0
-  - nbformat=5.1.3=pyhd3eb1b0_0
-  - ncurses=6.3=heee7806_1
-  - nest-asyncio=1.5.1=pyhd3eb1b0_0
-  - networkx=2.6.3=pyhd3eb1b0_0
-  - ninja=1.10.2=hff7bd54_1
-  - notebook=6.4.5=py39h06a4308_0
-  - numexpr=2.7.3=py39hb2eb853_0
-  - numpy=1.19.2=py39h89c1606_0
-  - numpy-base=1.19.2=py39h2ae0177_0
-  - oauthlib=3.1.1=pyhd8ed1ab_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openjpeg=2.4.0=h3ad879b_0
-  - openssl=1.1.1l=h7f8727e_0
-  - packaging=21.0=pyhd3eb1b0_0
-  - pandas=1.3.4=py39h8c16a72_0
-  - pandocfilters=1.4.3=py39h06a4308_1
-  - parso=0.8.2=pyhd3eb1b0_0
-  - partd=1.2.0=pyhd3eb1b0_0
-  - pcre=8.45=h9c3ff4c_0
+  - mkl=2021.4.0=h8d4b97c_729
+  - mkl-service=2.4.0=py39h7e14d7c_0
+  - mkl_fft=1.3.1=py39h0c7bc48_1
+  - mkl_random=1.2.2=py39hde0f152_0
+  - multidict=5.2.0=py39h5eee18b_3
+  - munkres=1.1.4=py_0
+  - nbclassic=0.3.5=pyhd3eb1b0_0
+  - nbclient=0.5.13=py39h06a4308_0
+  - nbconvert=6.4.4=py39h06a4308_0
+  - nbformat=5.5.0=py39h06a4308_0
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.5=py39h06a4308_0
+  - nettle=3.6=he412f7d_0
+  - notebook=6.4.12=py39h06a4308_0
+  - numexpr=2.8.3=py39h807cd23_0
+  - numpy=1.21.5=py39h6c91a56_3
+  - numpy-base=1.21.5=py39ha15fc14_3
+  - oauthlib=3.2.0=pyhd3eb1b0_1
+  - openh264=2.1.1=h780b84a_0
+  - openjpeg=2.5.0=h7d73246_1
+  - openssl=1.1.1q=h7f8727e_0
+  - packaging=21.3=pyhd3eb1b0_0
+  - pandas=1.4.4=py39h6a678d5_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=7.2.0=py39h6f3857e_2
-  - pip=21.2.4=py39h06a4308_0
-  - prometheus_client=0.11.0=pyhd3eb1b0_0
+  - pillow=9.2.0=py39hd5dbb17_2
+  - pip=22.2.2=pyhd8ed1ab_0
+  - prometheus_client=0.14.1=py39h06a4308_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
-  - protobuf=3.15.8=py39he80948d_0
+  - protobuf=3.20.1=py39h295c915_0
+  - psutil=5.9.0=py39h5eee18b_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycocotools=2.0.2=py39h3811e60_1
-  - pycparser=2.20=py_2
-  - pydeprecate=0.3.1=pyhd8ed1ab_0
-  - pygments=2.10.0=pyhd3eb1b0_0
-  - pyjwt=2.3.0=pyhd8ed1ab_0
-  - pyopenssl=21.0.0=pyhd3eb1b0_1
-  - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py39h06a4308_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_1
+  - pyparsing=3.0.9=py39h06a4308_0
   - pyqt=5.9.2=py39h2531618_6
   - pyrsistent=0.18.0=py39heee7806_0
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.7=h12debd9_1
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.9.13=haa1d7c7_1
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py39h06a4308_0
   - python_abi=3.9=2_cp39
-  - pytorch=1.7.1=cpu_py39h6a09485_0
-  - pytorch-lightning=1.5.1=pyhd8ed1ab_0
-  - pytz=2021.3=pyhd3eb1b0_0
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pywavelets=1.1.1=py39h6323ea4_4
-  - pyyaml=5.4.1=py39h3811e60_0
-  - pyzmq=22.2.1=py39h295c915_1
+  - pytorch=1.12.1=py3.9_cuda11.6_cudnn8.3.2_0
+  - pytorch-mutex=1.0=cuda
+  - pytz=2022.1=py39h06a4308_0
+  - pyzmq=23.2.0=py39h6a678d5_0
   - qt=5.9.7=h5867ecd_1
-  - readline=8.1=h27cfd23_0
-  - requests=2.26.0=pyhd3eb1b0_0
-  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
-  - rsa=4.7.2=pyh44b312d_0
-  - scikit-image=0.18.3=py39h51133e4_0
-  - scikit-learn=1.0.1=py39h51133e4_0
-  - scipy=1.6.2=py39h91f5cce_0
+  - readline=8.1.2=h0f457ee_0
+  - requests=2.28.1=pyhd8ed1ab_1
+  - requests-oauthlib=1.3.0=py_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - scikit-learn=1.1.1=py39h6a678d5_0
+  - scipy=1.7.3=py39h6c91a56_2
+  - seaborn=0.11.2=pyhd3eb1b0_0
   - send2trash=1.8.0=pyhd3eb1b0_1
-  - setuptools=58.0.4=py39h06a4308_0
-  - sip=4.19.13=py39h2531618_0
-  - six=1.16.0=pyhd3eb1b0_0
-  - snappy=1.1.8=he6710b0_0
+  - setuptools=65.3.0=pyhd8ed1ab_1
+  - sip=4.19.13=py39h295c915_0
+  - six=1.16.0=pyh6c4a22f_0
   - sniffio=1.2.0=py39h06a4308_1
-  - sqlite=3.36.0=hc218d9a_0
-  - tensorboard=2.7.0=pyhd8ed1ab_0
-  - tensorboard-data-server=0.6.0=py39h3da14fd_0
-  - tensorboard-plugin-wit=1.8.0=pyh44b312d_0
-  - terminado=0.9.4=py39h06a4308_0
-  - testpath=0.5.0=pyhd3eb1b0_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tifffile=2021.7.2=pyhd3eb1b0_2
-  - tk=8.6.11=h1ccaba5_0
-  - toolz=0.11.1=pyhd3eb1b0_0
-  - torchmetrics=0.6.0=pyhd8ed1ab_0
-  - torchvision=0.8.2=cpu_py39ha229d99_0
-  - tornado=6.1=py39h27cfd23_0
-  - tqdm=4.62.3=pyhd8ed1ab_0
-  - traitlets=5.1.0=pyhd3eb1b0_0
-  - typing-extensions=3.10.0.2=hd3eb1b0_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
-  - tzdata=2021e=hda174b7_0
-  - urllib3=1.26.7=pyhd3eb1b0_0
+  - soupsieve=2.3.1=pyhd3eb1b0_0
+  - sqlite=3.39.3=h4ff8645_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tbb=2021.5.0=h924138e_5
+  - tensorboard=2.9.0=py39h06a4308_0
+  - tensorboard-data-server=0.6.0=py39hca6d32c_0
+  - tensorboard-plugin-wit=1.8.1=py39h06a4308_0
+  - terminado=0.13.1=py39h06a4308_0
+  - testpath=0.6.0=py39h06a4308_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tk=8.6.12=h27826a3_0
+  - torchaudio=0.12.1=py39_cu116
+  - torchvision=0.13.1=py39_cu116
+  - tornado=6.2=py39h5eee18b_0
+  - traitlets=5.1.1=pyhd3eb1b0_0
+  - typing-extensions=4.3.0=py39h06a4308_0
+  - typing_extensions=4.3.0=py39h06a4308_0
+  - tzdata=2022c=h191b570_0
+  - urllib3=1.26.11=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py39h06a4308_1
-  - werkzeug=2.0.1=pyhd8ed1ab_0
-  - wheel=0.37.0=pyhd3eb1b0_1
+  - websocket-client=0.58.0=py39h06a4308_4
+  - werkzeug=2.0.3=pyhd3eb1b0_0
+  - wheel=0.37.1=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xz=5.2.5=h7b6447c_0
-  - yaml=0.2.5=h516909a_0
-  - yarl=1.6.3=py39h3811e60_2
+  - xz=5.2.6=h166bdaf_0
+  - yarl=1.8.1=py39h5eee18b_0
   - zeromq=4.3.4=h2531618_0
-  - zfp=0.5.5=h2531618_6
-  - zipp=3.6.0=pyhd3eb1b0_0
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.9=haebb681_0
+  - zipp=3.8.0=py39h06a4308_0
+  - zlib=1.2.12=h166bdaf_3
+  - zstd=1.5.2=h6239696_4
 prefix: /home/stud/t/tiacor19/.conda/envs/deeplearn
